# ml_optional

./: .gitignore  README.md  pyproject.toml  胃肠道内窥镜图像分类研究.docx
classify_GastroVision/: config.py  main.py  visualization.py
classify_GastroVision/data/: dataset.py  transforms.py
classify_GastroVision/models/: classifier.py
classify_GastroVision/output/20260510_234203/: TRAINING_REPORT.md
classify_GastroVision/output/20260511_132216/: TRAINING_REPORT.md
classify_GastroVision/output/20260512_220442/: TRAINING_REPORT.md  per_class_metrics.csv
classify_GastroVision/output/20260513_091553/: TRAINING_REPORT.md  per_class_metrics.csv
classify_GastroVision/training/: evaluate.py  losses.py  train.py
classify_Hyper_Kvasir/: config.py  main.py  visualization.py
classify_Hyper_Kvasir/data/: dataset.py  transforms.py
classify_Hyper_Kvasir/models/: classifier.py
classify_Hyper_Kvasir/output/20260510_173017/: TRAINING_REPORT.md
classify_Hyper_Kvasir/output/20260511_231455/: TRAINING_REPORT.md
classify_Hyper_Kvasir/output/20260512_152520/: per_class_metrics.csv  training_report.md
classify_Hyper_Kvasir/training/: evaluate.py  train.py
dataset-summary/: GastroVision.md  Hyper-Kvasir.md
