[project]
name = "ml-optional"
version = "0.1.0"
description = "ML optional project"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.9",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.409",
    "types-tqdm>=4.67.3.20260408",
]
